<resources>
    <string name="app_name">Mitramas Note</string>
    <string name="txt_daftar">Daftar</string>
    <string name="txt_masuk">Masuk</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_nama">Nama</string>
    <string name="txt_aktivitas">Aktivitas</string>
    <string name="txt_tambah">Tambah</string>
    <string name="txt_done">Activity Done</string>
    <string name="txt_akun_daftar">Belum punya akun, daftar disini</string>
    <string name="txt_akun_login">Sudah punya akun, login disini</string>
    <string name="txt_no_activity">Belum ada aktivitas</string>
    <string name="txt_halo">Hai Bro!</string>
    <string name="txt_date">Tanggal</string>
</resources>
